# magpy

./: .gitignore  LICENSE  README.md  config.toml  fetch_from_s3.py  nblite.toml  pyproject.toml  upload_to_s3.py
.llm_context/: CONVENTIONS.md  PLAN.md  PROJECT_LOG.md  PROJECT_STRUCTURE.md  adulib.llm.completions.pct.py  adulib_skeleton.md
magpy/: __init__.py  const.py  utils.py
magpy/core/: config.py
magpy/extract/: __init__.py  extractor.py  schema.py
nbs/: index.ipynb
nbs/api/: config.ipynb  const.ipynb  utils.ipynb
nbs/api/cli/: app.ipynb  main.ipynb
nbs/api/core/: __init__.ipynb  config.ipynb
nbs/api/extract/: extractor.ipynb  schema.ipynb
nbs/examples/extract/: 00_data_extraction_from_text.ipynb  01_pdfs_to_csv.ipynb
pts/: index.pct.py
pts/api/: config.pct.py  const.pct.py  utils.pct.py
pts/api/cli/: main.pct.py
pts/api/core/: __init__.pct.py  config.pct.py
pts/api/extract/: extractor.pct.py  schema.pct.py
pts/examples/extract/: 00_data_extraction_from_text.pct.py  01_pdfs_to_csv.pct.py
